tests/pass/global_const_chain.tc
const int base = 2;
const int next = base + 5;
int main() {
  return next;
}
