tests/fail/const_nonconstant.tc
int main() {
  int x = 1;
  const int y = x + 2;
  return y;
}
